--- a/ReduxList/package.json
+++ b/ReduxList/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^27.0.1",
     "firebase": "^5.5.0",
     "react": "16.3.1",
