--- a/ReduxList/package.json
+++ b/ReduxList/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.18.0",
     "expo": "^27.0.1",
     "firebase": "^5.5.0",
+    "firebase-admin": "^6.0.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
